refactor: Add unit tests and refactor the code (#17)
* Moved to @vscode/test-electron

* Basic Jest setup from CLI

* Normalize running from terminal and debug

* Create a base build to share with test and compile

* Refactored config getter from folder to scope

* Return to mocha and install chaiJS

* Setup Sinon

* Moved from sinon replace to stub

* Just a minor tsconfig adjust

* changed test build path

* Adding a missing disposable

* Add output channel to the disposables

* Huge refactor to better handle disposables

* Refactored types and unnecessary variables

* Add test for Dispose Manager

* Adding workspace to test physical files

* Adding tests for Commands Registration

* Fix launch command

* Adding test to run from Command picker

* Make package.json imported from only one file

* Adding tests for the Makefile watcher

* Adding tests for workspace files utils

* Adding tests for the Task Cache

* Add tests for Create Makefile task function

* Add tests for Get Available Tasks

* Add variables that should be ignored while parsing

* Adding more comments

* Remove duplicated menus

* Update parser to accept a .PHONY without an empty line after it

Co-authored-by: Carlos Gomes <cgomes1@wayfair.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,20 +9,27 @@
       "name": "Run Extension",
       "type": "extensionHost",
       "request": "launch",
+      "sourceMaps": true,
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
       "outFiles": ["${workspaceFolder}/build/**/*.js"],
       "preLaunchTask": "${defaultBuildTask}"
     },
     {
-      "name": "Extension Tests",
+      "name": "Test Extension",
       "type": "extensionHost",
       "request": "launch",
+      "sourceMaps": true,
+      "runtimeExecutable": "${execPath}",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}",
-        "--extensionTestsPath=${workspaceFolder}/build/test/suite/index"
+        "--extensionTestsPath=${workspaceFolder}/.vscode-test/build/test/suite/index",
+        "${workspaceFolder}/src/test/examples/case-1"
       ],
-      "outFiles": ["${workspaceFolder}/build/test/**/*.js"],
-      "preLaunchTask": "${defaultBuildTask}"
+      "outFiles": ["${workspaceFolder}/.vscode-test/build/**/*.js"],
+      "preLaunchTask": "Compile Test",
+      "env": {
+        "NODE_ENV": "test"
+      }
     }
   ]
 }
