--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
         {
           "command": "make-task-provider.openMakefile",
           "when": "view == make && viewItem == Makefile",
-          "group": "navigation"
+          "group": "inline"
         },
         {
           "command": "make-task-provider.runTargetFromTreeView",
@@ -102,16 +102,6 @@
           "command": "make-task-provider.openMakefile",
           "when": "view == make && viewItem == MakefileTarget",
           "group": "inline"
-        },
-        {
-          "command": "make-task-provider.runTargetFromTreeView",
-          "when": "view == make && viewItem == MakefileTarget",
-          "group": "navigation@1"
-        },
-        {
-          "command": "make-task-provider.openMakefile",
-          "when": "view == make && viewItem == MakefileTarget",
-          "group": "navigation@2"
         }
       ]
     },
@@ -161,13 +151,10 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "yarn lint && rm -rf build/ && yarn compile:prod",
-    "compile": "esbuild src/extension.ts --bundle --sourcemap --platform=node --target=node14 --external:vscode  --outfile=build/extension.js",
-    "compile:prod": "yarn run compile --minify --define:process.env.NODE_ENV=\\\"production\\\"",
+    "vscode:prepublish": "yarn lint && rm -rf build/ && make compile_prod",
     "lint": "yarn type-check && eslint src",
-    "watch": "nodemon --watch src -e ts --exec \"yarn compile\" ",
-    "pretest": "yarn run compile && yarn run lint",
-    "test": "node ./build/test/runTest.js",
+    "watch": "nodemon --watch src -e ts --exec \"make compile\"",
+    "test": "make test",
     "changelog": "npx conventional-changelog-cli --infile CHANGELOG.md --same-file",
     "version": "yarn run changelog && git add CHANGELOG.md",
     "type-check": "tsc --noEmit -p ./"
@@ -176,12 +163,19 @@
   "devDependencies": {
     "@amplitude/node": "^1.2.0",
     "@sentry/node": "^6.0.2",
+    "@types/chai": "^4.2.21",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.0",
+    "@types/mocha": "^9.0.0",
     "@types/node": "~14",
+    "@types/sinon": "^10.0.2",
+    "@types/sinon-chai": "^3.2.5",
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vscode/test-electron": "^1.6.2",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "esbuild": "^0.8.36",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -189,13 +183,16 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "glob": "^7.1.6",
-    "mocha": "^8.2.1",
+    "mocha": "^9.0.3",
     "node-machine-id": "^1.1.12",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
+    "tap": "^15.0.9",
     "typescript": "^4.1.3",
-    "vscode-extension-analytics": "^0.0.4",
-    "vscode-test": "^1.5.0"
+    "util.promisify": "^1.1.1",
+    "vscode-extension-analytics": "^0.0.4"
   },
   "engines": {
     "vscode": "^1.50.0"
