--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
   "settings": {
     "import/core-modules": ["vscode"]
   },
-  "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/", ".temp"],
+  "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/", ".temp", ".vscode-test"],
   "rules": {
     "class-methods-use-this": "off",
     "no-console": "off",
@@ -76,6 +76,12 @@
       "files": ["*.d.ts"],
       "rules": {
         "@typescript-eslint/no-unused-vars": "off"
+      }
+    },
+    {
+      "files": ["*.test.ts"],
+      "rules": {
+        "no-unused-expressions": "off"
       }
     }
   ]
