--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,9 @@
       "script": "watch",
       "problemMatcher": {
         "owner": "custom",
-        "pattern": { "regexp": "__________" },
+        "pattern": {
+          "regexp": "__________"
+        },
         "background": {
           "activeOnStart": true,
           "beginsPattern": "restarting due to changes",
@@ -23,6 +25,12 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "label": "Compile Test",
+      "type": "shell",
+      "command": "make compile_test",
+      "problemMatcher": []
     }
   ]
 }
