--- a/.github/workflows/pr_validate.yaml
+++ b/.github/workflows/pr_validate.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   validate:
-    name: Validate Pull Request
+    name: Lint and Test
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
