--- a/.github/actions/setup_workspace/action.yaml
+++ b/.github/actions/setup_workspace/action.yaml
@@ -20,3 +20,6 @@ runs:
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-yarn-
+
+    - run: yarn --frozen-lockfile
+      shell: bash
