--- a/.github/workflows/pr_validate.yaml
+++ b/.github/workflows/pr_validate.yaml
@@ -25,4 +25,4 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: yarn test
+          run: make test
