fix: Rearrange semantic-release plugins to include the CHANGELOG.md

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -30,8 +30,8 @@
         "npmPublish": false
       }
     ],
-    "@semantic-release/github",
+    "@semantic-release/changelog",
     "@semantic-release/git",
-    "@semantic-release/changelog"
+    "@semantic-release/github"
   ]
 }
