--- a/package.json
+++ b/package.json
@@ -176,36 +176,36 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@amplitude/node": "^1.2.0",
-    "@sentry/node": "^6.0.2",
-    "@types/chai": "^4.2.21",
-    "@types/chai-as-promised": "^7.1.4",
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^9.0.0",
+    "@amplitude/node": "^1.9.2",
+    "@sentry/node": "^6.17.9",
+    "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "~14",
-    "@types/sinon": "^10.0.2",
-    "@types/sinon-chai": "^3.2.5",
-    "@types/vscode": "^1.50.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "@vscode/test-electron": "^1.6.2",
-    "chai": "^4.3.4",
+    "@types/sinon": "^10.0.11",
+    "@types/sinon-chai": "^3.2.8",
+    "@types/vscode": "^1.64.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "@vscode/test-electron": "^2.1.2",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "esbuild": "^0.8.36",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "glob": "^7.1.6",
-    "mocha": "^9.0.3",
+    "esbuild": "^0.14.21",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.0",
     "node-machine-id": "^1.1.12",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "realpath": "^2.0.0",
     "rimraf": "^3.0.2",
-    "sinon": "^11.1.2",
+    "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
-    "tap": "^15.0.9",
     "typescript": "^4.5.5",
     "util.promisify": "^1.1.1",
     "vscode-extension-analytics": "^0.0.4"
