feat: Adding extra arguments to execution

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,12 @@
       "preLaunchTask": "Compile Test",
       "env": {
         "NODE_ENV": "test"
-      }
+      },
+      "skipFiles": [
+        "<node_internals>/**",
+        "internal/**",
+        "**/Visual Studio Code.app/**"
+      ]
     }
   ]
 }
