--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
           "makeFileRelativePath": {
             "type": "string",
             "description": "Relative path to the Makefile containing your targets to be executed"
+          },
+          "args": {
+            "type": "array",
+            "description": "Arguments to pass to the make target as: make {...args} {target}"
           }
         }
       }
@@ -164,6 +168,12 @@
             "open"
           ],
           "markdownDescription": "The action to trigger when clicking on a target on the targets list: `open` or `run`, the default is `run`."
+        },
+        "make-task-provider.extraArguments": {
+          "scope": "resource",
+          "type": "array",
+          "default": [],
+          "markdownDescription": "Additional flags to be added to the run command like: `make {...extraFlags} {target}`"
         }
       }
     }
