--- a/src/test/examples/case-1/Makefile
+++ b/src/test/examples/case-1/Makefile
@@ -13,3 +13,13 @@ test:
 var_1 := "variable test 1"
 var_2 ::= "variable posix"
 var_3 ?= "optional variable"
+
+# Double colon rule
+# https://www.gnu.org/software/make/manual/html_node/Double_002dColon.html
+double-colon::
+	echo "double colon"
+
+double-colon-with-space ::
+	echo "double colon with space"
+
+double-requisites:: test
