--- a/.github/actions/setup_workspace/action.yaml
+++ b/.github/actions/setup_workspace/action.yaml
@@ -4,22 +4,10 @@ description: Checkout the repo, setup Node, and install dependencies
 runs:
   using: composite
   steps:
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v3
       with:
-        node-version: 14
-
-    - name: Get yarn cache directory path
-      id: yarn_cache_dir_path
-      shell: bash
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-
-    - uses: actions/cache@v2
-      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-      with:
-        path: ${{ steps.yarn_cache_dir_path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
+        node-version: 18
+        cache: yarn
 
     - run: yarn --frozen-lockfile
       shell: bash
