--- a/package.json
+++ b/package.json
@@ -198,18 +198,18 @@
   "devDependencies": {
     "@amplitude/node": "^1.9.2",
     "@sentry/node": "^6.17.9",
-    "@types/chai": "^4.3.0",
+    "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "~14",
-    "@types/sinon": "^10.0.11",
-    "@types/sinon-chai": "^3.2.8",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18",
+    "@types/sinon": "^10.0.13",
+    "@types/sinon-chai": "^3.2.9",
     "@types/vscode": "^1.60.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vscode/test-electron": "^2.1.2",
-    "chai": "^4.3.6",
+    "@vscode/test-electron": "^2.3.0",
+    "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "esbuild": "^0.14.21",
     "eslint": "^8.37.0",
@@ -218,15 +218,15 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "glob": "^7.2.0",
-    "mocha": "^9.2.0",
+    "mocha": "^10.2.0",
     "node-machine-id": "^1.1.12",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "realpath": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "sinon": "^13.0.1",
+    "rimraf": "^4.4.1",
+    "sinon": "^15.0.3",
     "sinon-chai": "^3.7.0",
-    "typescript": "^4.5.5",
+    "typescript": "^5.0.3",
     "util.promisify": "^1.1.1",
     "vscode-extension-analytics": "^0.0.4"
   },
