--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "newLine": "lf",
     "removeComments": false,
     "resolveJsonModule": true,
-    "useUnknownInCatchVariables": false
+    "useUnknownInCatchVariables": false,
+    "skipLibCheck": true
   },
   "exclude": ["node_modules", "src/test", ".vscode-test", "build", ".temp"]
 }
