fix(sentry): Update and use local client to not pollute global scope (#37)
* fix(sentry): Update sentry and use local client to avoid polluting global scope

* fix lint

* Update github actions dependencies

* Update test dependencies

--- a/package.json
+++ b/package.json
@@ -197,18 +197,18 @@
   "dependencies": {},
   "devDependencies": {
     "@amplitude/node": "^1.10.2",
-    "@sentry/node": "^7.47.0",
+    "@sentry/browser": "^8.35.0",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18",
+    "@types/node": "^20",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
     "@types/vscode": "~1.70.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vscode/test-electron": "^2.3.0",
+    "@vscode/test-electron": "^2.4.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "esbuild": "^0.17.15",
